# lightning

./: API_DOCUMENTATION.md  ARCHITECTURE.md  Cargo.toml  FINAL_SUMMARY.md  PERFORMANCE_VALIDATION.md  README.md  build.rs  run_performance_tests.sh
benches/: order_latency_benchmark.rs
examples/: README.md  cancel_order_demo.rs  client.rs  full_integration_test.rs  integration_test.rs  level2_demo.rs  matching_demo.rs  microsecond_latency_validator.rs  order_demo.rs  realtime_performance_monitor.rs
k6/: script.js
schema/proto/: lightning.proto  management.proto
src/: balance.rs  grpc.rs  lib.rs  main.rs  matching.rs  messages.rs  models.rs  processor.rs  utils.rs
