[package]
name = "lightning"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "0.14.2"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = "1.35"
thiserror = "2.0.17"
evmap = "11.0.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-prost-build = "*"
